--- a/Program/MainProgram/platformio.ini
+++ b/Program/MainProgram/platformio.ini
@@ -12,3 +12,10 @@
 platform = teensy
 board = teensy41
 framework = arduino
+monitor_speed = 115200
+lib_deps =
+  https://github.com/tsandmann/freertos-teensy.git  ; FreeRTOS port untuk Teensy 3.x/4.x
+
+; (opsional tapi disarankan untuk warning/size)
+build_flags =
+  -D CONFIG_FREERTOS_USE_STATS_FORMATTING_FUNCTIONS=1
